Update style.css - fixed dark mode bug

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ li.marked .mark {
     box-shadow: 0 0 10px rgba(255,255,255,0.1);
 }
 
-.dark-mode #input input, input {
+.dark-mode #input input, .dark-mode input {
     border: 1px solid #444;
     background-color: #000;
     color: #aaa;
